chore: add health check server

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
+# Privy Configuration
 PRIVY_APP_ID=
 PRIVY_APP_SECRET=
 PRIVY_SIGNER_PRIVATE_KEY=
+PRIVY_SIGNER_ID=
 
+# Telegram Bot Configuration
 TELEGRAM_TOKEN=
+
+# Environment
+NODE_ENV=production
+
+# Health Check Port (Railway auto-assigns PORT)
+PORT=3000
