feat: agentic wallets using Privy (#1)
* feat: create basic /transact command

* feat: add better error handling related to user inputs

* feat: add error handlers for app startup

* chore: rename package

* feat: create /disconnect that removes session

* refactor: split up commands into separate handlers for easier testing

* feat: add types for SessionData

* fix: linting

* feat: move constants to its own file

* chore: create fixtures for reusable test data and helper functions

* docs: add TESTING.md as testing strategy

* chore: add vitest and config for testing

* chore: add tests to .gitignore

* test: create mocks environment for privy and TG bot

* test: create tests for main entry points of TG bot

* docs: add test summary to README.md

* fix: wrap global errors with safer error logging

* fix: user proper error type checking

* fix: add the correct language tag

* fix: defensive check on critical env var

* fix: handle incorrect implementation of using address instead of wallet ID

* fix: add optional chaining for msg.chat.id

* fix: make consistent config for code formatting

* fix: formatting

* fix: handle race condition between timeout and receiving message from incorrect users

* fix: replace global listener with persistent handler

The handler is for per-user state tracking in order to safely handle
multiple users with pending transactions without any cross-user
interference.

* fix: add clear TODO to improve hardcoded values

* fix: remove placeholders

* fix: add missing language tag

* fix: sync units

* fix: remove pending confirmation when user sends non-text message

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uniflow-agentic-wallets",
+  "name": "uniflow-telegram-bot",
   "version": "1.0.0",
   "main": "index.js",
   "packageManager": "pnpm@9.15.4",
@@ -7,9 +7,12 @@
     "build": "tsc",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -26,10 +29,12 @@
     "@types/node-telegram-bot-api": "^0.64.13",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
     "prettier": "^3.8.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   }
 }
