--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "packageManager": "pnpm@9.15.4",
   "scripts": {
     "build": "tsc",
+    "start": "node dist/bot.js",
+    "dev": "tsc && node dist/bot.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
