--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "packageManager": "pnpm@9.15.4",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/bot.js",
-    "dev": "tsc && node dist/bot.js",
+    "start": "node dist/server.js",
+    "dev": "tsc && node dist/server.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
@@ -24,9 +24,11 @@
     "@privy-io/node": "^0.8.0",
     "axios": "^1.13.4",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "node-telegram-bot-api": "^0.67.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/node": "^25.2.0",
     "@types/node-telegram-bot-api": "^0.64.13",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
