--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "axios": "^1.13.4",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "node-telegram-bot-api": "^0.67.0"
+    "node-telegram-bot-api": "^0.67.0",
+    "viem": "^2.45.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
