--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "axios": "^1.13.4",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "node-telegram-bot-api": "^0.67.0"
+    "viem": "^2.45.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.0",
-    "@types/node-telegram-bot-api": "^0.64.13",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "@vitest/coverage-v8": "^4.0.18",
