--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "description": "",
   "dependencies": {
     "@privy-io/node": "^0.8.0",
+    "@uniswap/sdk-core": "^7.10.1",
+    "@uniswap/v4-sdk": "^1.27.0",
     "axios": "^1.13.4",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
