fix: bad request error when creating policies

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PRIVY_APP_ID=
 PRIVY_APP_SECRET=
 PRIVY_SIGNER_PRIVATE_KEY=
 PRIVY_SIGNER_ID=
+PRIVY_POLICY_ID=
 
 # Telegram Bot Configuration
 TELEGRAM_TOKEN=
