fix: logging and tests for fetch position endpoint

--- a/.env.example
+++ b/.env.example
@@ -22,17 +22,15 @@ THE_GRAPH_API_KEY=your_thegraph_api_key_here
 # Coinmarketcap (for price feeds, tickers, token data)
 COINMARKETCAP_API_KEY=
 
-# Infura (RPC connection)
-
-# Infura (RPC)
-INFURA_ETHEREUM_RPC_URL=
-INFURA_BSC_RPC_URL=
+# Infura Configuration (optional - falls back to public RPCs if not set)
+# The full URL is constructed as: {INFURA_*_RPC_URL}{INFURA_API_KEY}
+# Example: https://mainnet.infura.io/v3/ + your_api_key_here
 INFURA_API_KEY=
-
-# Optional private RPC endpoints (override public RPCs)
-BASE_RPC_URL=
-ARBITRUM_RPC_URL=
-UNICHAIN_RPC_URL=
+INFURA_ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/
+INFURA_BSC_RPC_URL=https://bsc-mainnet.infura.io/v3/
+INFURA_BASE_RPC_URL=https://base-mainnet.infura.io/v3/
+INFURA_ARBITRUM_RPC_URL=https://arbitrum-mainnet.infura.io/v3/
+INFURA_UNICHAIN_RPC_URL=https://unichain-mainnet.infura.io/v3/
 
 # Health Check Port (Railway auto-assigns PORT)
 PORT=3000
