fix: change package name and fix build errors (#12)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uniflow-telegram-bot",
+  "name": "uniflow-backend",
   "version": "1.0.0",
   "main": "index.js",
   "packageManager": "pnpm@9.15.4",
